created 2 new endpoints and modified the controller, service, responsebuilder, responseService, global exception handler and created a new dto, new exception and a new mapper